# ugoite

./: .commitlintrc.cjs  .gitignore  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.e2e.yml  docker-compose.release.yaml  docker-compose.yaml  mise.toml  package-lock.json  package.json  pyproject.toml
.changeset/: README.md
.devcontainer/: devcontainer.json
.github/: .release-please-manifest.json  dependabot.yml  pull_request_template.md  release-please-config.json  required-status-checks.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: all-tests-ci.yml  cli-release-binaries.yml  codeql.yml  commitlint-ci.yml  devcontainer-ci.yml  docker-build-ci.yml  docker-images.yml  docsite-ci.yml  docsite-pages.yml  e2e-ci.yml  frontend-ci.yml  pr-require-close-issue.yml  pre-commit-ci.yml  python-ci.yml  readme-command-guard.yml  release-ci.yml  release-publish.yml  release-quickstart-verify-ci.yml  release-quickstart-verify.yml  rust-ci.yml  sbom-ci.yml  scancode.yml  shell-ci.yml  yaml-workflow-ci.yml
.husky/: commit-msg
backend/: .coverage  .env.example  Dockerfile  README.md  check_import.py  mise.toml  pyproject.toml
backend/issue_closures/: issue-285.txt  issue-287.txt  issue-288.txt  issue-289.txt  issue-290.txt  issue-291.txt  issue-292.txt  issue-293.txt  issue-294.txt  issue-298.txt  issue-300.txt  issue-303.txt  issue-305.txt  issue-306.txt  issue-308.txt  issue-309.txt  issue-310.txt  issue-311.txt  issue-312.txt  issue-313.txt  issue-318.txt  issue-320.txt  issue-326.txt  issue-328.txt  issue-329.txt  issue-338.txt  issue-339.txt  issue-340.txt  issue-348.txt  issue-419.txt  issue-420.txt  issue-421.txt  issue-422.txt  issue-423.txt
backend/src/app/: main.py
backend/src/app/api/: api.py
backend/src/app/api/endpoints/: asset.py  audit.py  auth.py  entry.py  forms.py  members.py  preferences.py  search.py  service_accounts.py  space.py  sql.py  sql_sessions.py
backend/src/app/core/: auth.py  authorization.py  config.py  middleware.py  security.py
backend/src/app/mcp/: sanitization.py  server.py
backend/src/app/models/: payloads.py
backend/tests/: conftest.py  test_api.py  test_api_memory.py  test_audit.py  test_auth.py  test_auth_admin_recovery.py  test_auth_passkeys_oauth2_linking.py  test_config.py  test_coverage_gaps.py  test_dev_auth.py  test_entry_attribution.py  test_error_sanitization.py  test_forms.py  test_forms_acl.py  test_forms_reserved_identity.py  test_mcp_sanitization.py  test_preferences.py  test_service_accounts.py  test_space_members.py  test_sql.py
charts/ugoite/: Chart.yaml  README.md  values.yaml
docs/guide/: cli.md  (+18 more)
docsite/: .gitignore  README.md  astro.config.mjs  biome.json  mise.toml  package.json  tailwind.config.mjs  vitest.config.ts
e2e/: .env.example  api-proxy-security.test.ts  dashboard-first-form.test.ts  docsite-links.test.ts  docsite-mobile-nav.test.ts  docsite-onboarding.test.ts  docsite-theme-controls.test.ts  entries.test.ts  forms-acl.test.ts  forms.test.ts  mise.toml  navigation.test.ts  package-lock.json  package.json  playwright.config.ts  public-pages.test.ts  saved-sql-route.test.ts  search-ui.test.ts  smoke.test.ts  space-membership.test.ts  space-settings-storage-guidance.test.ts  ui-pages-screenshots.test.ts  ui-themes.test.ts
frontend/: .env.example  Dockerfile  README.md  app.config.ts  mise.toml  package.json  vitest.config.ts
scripts/: check-placeholder-artifacts.sh  check-root-artifact-hygiene.sh  check-shell-quality.sh  check_minimum_coverage.py  check_pytest_no_skips.py  cleanup-dev-ports.sh  cleanup-rust-targets.sh  dev-auth-env.sh  dev-seed.sh  ensure-bun-package-install.sh  fail_on_skipped_tests.py  install-ugoite-cli.sh  local-smoke-check.sh  render-cli-release-installer.sh  render_release_notes.py  set-ghcr-package-public.sh  verify-release-cli-quickstart.sh  verify-release-container-quickstart.sh  wait-for-http.sh
ugoite-cli/: Cargo.toml  README.md  mise.toml  pyproject.toml
ugoite-cli/scripts/: reset-endpoint-config.sh
ugoite-cli/src/: config.rs  http.rs  lib.rs  main.rs  test_support.rs
ugoite-cli/src/commands/: asset.rs  auth.rs  config.rs  entry.rs  form.rs  index.rs  link.rs  mod.rs  search.rs  space.rs  sql.rs
ugoite-cli/src/ugoite/: cli.py  endpoint_config.py  logging_utils.py  space.py
ugoite-cli/tests/: conftest.py  integration_test.rs  test_assets.rs  test_auth.rs  test_cli_endpoint_routing.py  test_cli_endpoint_routing.rs  test_cli_form.py  test_cli_form.rs  test_cli_req_ops_006_config_helpers.rs  test_cli_req_ops_006_coverage.rs  test_cli_req_ops_006_http_helpers.rs  test_cli_req_sec_011_endpoint_transport.rs  test_endpoint_config.py  test_endpoint_config.rs  test_entries.rs  test_forms.rs  test_indexer.rs  test_integrity.rs  test_saved_sql.rs  test_space.rs  test_sql_rules.rs
ugoite-cli/tests/support/: mod.rs
ugoite-core/: .gitignore  Cargo.toml  mise.toml  pyproject.toml
ugoite-core/src/: asset.rs  audit.rs  auth.rs  entry.rs  index.rs  integrity.rs  lib.rs  link.rs  metadata.rs  preferences.rs  python_bindings.rs  sample_data.rs  search.rs  space.rs  sql_session.rs
ugoite-core/src/storage/: mod.rs
ugoite-core/tests/: test_asset.rs  test_async_bindings.py  test_audit.py  test_auth.py  test_auth_overview_consistency.py  test_bindings.py  test_entry.rs  test_entry_attribution.rs  test_form_reserved_identity.rs  test_index.rs  test_integrity.rs  test_preferences.rs  test_sample_data.rs  test_service_accounts.py  test_space.rs  test_sql_sessions.rs  test_sql_sessions_authz.py
ugoite-core/ugoite_core/: __init__.py  _ugoite_core.pyi  audit.py  auth.py  authz.py  membership.py  service_accounts.py  sql_rules.py  sql_sessions.py  storage_validation.py
ugoite-minimum/: Cargo.toml  README.md  mise.toml
ugoite-minimum/src/: integrity.rs  lib.rs  link.rs  metadata.rs  search.rs  space.rs  storage.rs  text.rs
ugoite-minimum/tests/: test_coverage.rs  test_integrity.rs  test_storage.rs  test_text.rs
(+350 files in other folders)
