[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "ugoite-core",
    "mcp>=1.0.0",
    "pyjwt>=2.12.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.12",
    "ty>=0.0.33",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv]

[tool.uv.sources]
ugoite-core = { path = "../ugoite-core", editable = true }

[tool.ruff]

[tool.ruff.lint]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101", "S105", "S106", "ARG001", "PLR2004", "ANN401", "E402", "TC003", "S603"]

[tool.pytest.ini_options]
addopts = "--cov=src/app --cov-report=term-missing --cov-fail-under=100"
