[package]
name = "ugoite-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "_ugoite_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opendal = { version = "0.55", default-features = false, features = ["executors-tokio", "services-fs", "services-memory", "services-s3", "services-gcs", "services-azdls", "services-oss"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
chrono = { version = "0.4.43", features = ["serde"] }
url = "2.5.0"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
futures = { version = "0.3.32", features = ["std"] }
pyo3-async-runtimes = { version = "0.24", features = ["tokio-runtime"] }
thiserror = "2.0.18"
base64 = "0.22.1"
rand = "0.10.0"
serde_yaml = "0.9.34"
regex = "1.12.3"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
iceberg = { version = "0.8.0", default-features = false, features = ["storage-fs", "storage-memory", "storage-s3", "storage-gcs", "storage-azdls", "storage-oss"] }
arrow-array = "57.0"
arrow-schema = "57.3"
parquet = { version = "57.3", default-features = false, features = ["arrow", "async"] }
sqlparser = "0.61.0"

[dev-dependencies]
pyo3 = { version = "0.24.1", features = ["auto-initialize"] }
