[package]
name = "ugoite-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "_ugoite_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python-bindings"]
python-bindings = ["pyo3/extension-module", "pyo3-async-runtimes"]

[dependencies]
async-trait = "0.1"
pyo3 = { version = "0.24.1", optional = true }
pyo3-async-runtimes = { version = "0.24", features = ["tokio-runtime"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ugoite-minimum = { path = "../ugoite-minimum" }
opendal = { version = "0.55", default-features = false, features = ["executors-tokio", "services-fs", "services-memory", "services-s3", "services-gcs", "services-azdls", "services-oss"] }
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
chrono = { version = "0.4.44", features = ["serde"] }
url = "2.5.0"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
futures = { version = "0.3.32", features = ["std"] }
thiserror = "2.0.18"
base64 = "0.22.1"
rand = "0.10.0"
serde_yaml = "0.9.34"
regex = "1.12.3"
sha2 = "0.11"
hmac = "0.12"
pbkdf2 = "0.12"
hex = "0.4"
subtle = "2.6"
iceberg = { version = "0.8.0", default-features = false, features = ["storage-fs", "storage-memory", "storage-s3", "storage-gcs", "storage-azdls", "storage-oss"] }
arrow-array = "57.0"
arrow-schema = "57.3"
parquet = { version = "57.3", default-features = false, features = ["arrow", "async"] }
sqlparser = "0.61.0"

[dev-dependencies]
pyo3 = { version = "0.24.1", features = ["auto-initialize"] }
tempfile = "3"

[patch.crates-io]
reqsign = { path = "vendor/reqsign" }
