[package]
name = "ugoite-minimum"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
hex = "0.4"
hmac = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha2_hmac = { package = "sha2", version = "0.11" }
url = "2.5.0"

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
